--- a/FindIt/Translations/es.csv
+++ b/FindIt/Translations/es.csv
@@ -1,5 +1,5 @@
 "CODE","es"
-"NAME","español"
+"NAME","Español"
 "FIF_DESC","Encuentra y organiza tus assets"
 "FIF_SET_DM","Desactivar registro de mensajes de depuración"
 "FIF_SET_DMTP","Si está activado, no se registrarán los mensajes de depuración."
