--- a/FindIt/Translations/fr.csv
+++ b/FindIt/Translations/fr.csv
@@ -238,15 +238,15 @@
 "FIF_DOU_WS_NOID","Cette fonctionnalité ne fonctionne qu'avec les assets personnalisés avec les ID Steam Workshop"
 "FIF_DOU_WS_STEAMTP","Voir cet asset sur le Steam Workshop dans l'overlay de Steam"
 "FIF_DOU_WS_BROWSERTP","Voir cet asset sur Steam Workshop dans le navigateur par défaut"
-"FIF_SET_RES_PANEL","Reset Find It panel when it is closed"
-"FIF_SET_RES_PANELTP","Reset all options in Find It when you close the panel"
-"FIF_SE_ICONTP","Export search results"
-"FIF_EXPORT_SEARCH","This will export the search results into an HTML file"
-"FIF_EF_DS","District Style"
-"FIF_SET_CHA","Allow asset creators to hide dependency assets from search results"
-"FIF_SET_CHATP","assets with creator_hidden in their description will be excluded from future search results"
-"FIF_GR_RW2W","Residential Wall-to-Wall"
-"FIF_GR_CW2W","Commercial Wall-to-Wall"
-"FIF_GR_OW2W","Office Wall-to-Wall"
-"FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
+"FIF_SET_RES_PANEL","Réinitialiser la fenêtre de Find It quand elle est fermée"
+"FIF_SET_RES_PANELTP","Remettre à zéro toutes les options de Find It lorsque vous fermez la fenêtre"
+"FIF_SE_ICONTP","Exporter les résultats de recherche"
+"FIF_EXPORT_SEARCH","Ceci exportera les résultats de la recherche dans un fichier HTML"
+"FIF_EF_DS","Style de quartier"
+"FIF_SET_CHA","Permettre aux créateurs d'assets de masquer les dépendances d'assets des résultats de recherche"
+"FIF_SET_CHATP","les assets avec creator_hidden dans leur description seront exclus des futurs résultats de recherche"
+"FIF_GR_RW2W","Bâtiments résidentiels contigus"
+"FIF_GR_CW2W","Bâtiments commerciaux contigus"
+"FIF_GR_OW2W","Bureaux contigus"
+"FIF_NET_ZPATH","Chemins zonables"
+"FIF_PLOP_SP","Points de service"
