--- a/FindIt/Translations/nl.csv
+++ b/FindIt/Translations/nl.csv
@@ -248,5 +248,5 @@
 "FIF_GR_RW2W","Muur tegen muur (Residentieel)"
 "FIF_GR_CW2W","Muur tegen muur (Commercieel)"
 "FIF_GR_OW2W","Muur tegen muur (Kantoren)"
-"FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
+"FIF_NET_ZPATH","Zoneerbare paden"
+"FIF_PLOP_SP","Servicepunten"
