--- a/FindIt/Translations/en.csv
+++ b/FindIt/Translations/en.csv
@@ -250,3 +250,4 @@ FIF_GR_CW2W,Commercial Wall-to-Wall
 FIF_GR_OW2W,Office Wall-to-Wall
 FIF_NET_ZPATH,Zonable Paths
 FIF_PLOP_SP,Service Points
+FIF_GR_FD,Financial Districts
