--- a/FindIt/Translations/es.csv
+++ b/FindIt/Translations/es.csv
@@ -250,3 +250,4 @@
 "FIF_GR_OW2W","Oficina pared a pared"
 "FIF_NET_ZPATH","Caminos zoneables"
 "FIF_PLOP_SP","Puntos de servicio"
+"FIF_GR_FD","Financial Districts"
