--- a/FindIt/Translations/fr.csv
+++ b/FindIt/Translations/fr.csv
@@ -250,3 +250,4 @@
 "FIF_GR_OW2W","Bureaux contigus"
 "FIF_NET_ZPATH","Chemins zonables"
 "FIF_PLOP_SP","Points de service"
+"FIF_GR_FD","Financial Districts"
