--- a/FindIt/Translations/it.csv
+++ b/FindIt/Translations/it.csv
@@ -9,15 +9,15 @@
 "FIF_SET_ULTP","Permette di selezionare e posizionare oggetti anche se bloccati."
 "FIF_SET_BP","Sistema oggetti danneggati al prossimo caricamento"
 "FIF_SET_BPTP","Rimuovi tutti gli oggetti problematici. Attiva l'opzione e ricarica il salvataggio."
-"FIF_SE_WF","Custom"
+"FIF_SE_WF","Personalizzato"
 "FIF_SE_VF","Vanilla"
 "FIF_SE_IA","Tutto"
-"FIF_SE_IN","Network"
+"FIF_SE_IN","Rete"
 "FIF_SE_IP","Ploppable"
 "FIF_SE_IG","Growable"
 "FIF_SE_IR","RICO"
-"FIF_SE_IPR","Prop"
-"FIF_SE_ID","Decal"
+"FIF_SE_IPR","Oggetti"
+"FIF_SE_ID","Decalcomania"
 "FIF_SE_IT","Albero"
 "FIF_SE_LV","Livello Edificio"
 "FIF_SE_SZ","Dimensione:"
@@ -68,7 +68,7 @@
 "FIF_PROP_LIG","Luci"
 "FIF_PROP_NAT","Naturale"
 "FIF_PROP_UNS","Altro"
-"FIF_SET_KS","Main Keyboard Shortcut"
+"FIF_SET_KS","Scorciatoia Tastiera Principale"
 "FIF_SE_IGR","Grwb/RICO"
 "FIF_SET_CTFL","Posizione dei file delle etichette personalizzate (Ricorda di eseguire spesso il backup)"
 "FIF_SET_CTFOP","Mostra nel File Explorer"
@@ -152,7 +152,7 @@
 "FIF_SET_PMTP","I prop marcatori sono invisibili e molti non funzionano in gioco. Usa Move It per cancellarli."
 "FIF_SET_IC","Mostra il numero di istanze esistenti di ogni asset"
 "FIF_EF_UN","Asset non usati"
-"FIF_QM_TIT","Quick Menu"
+"FIF_QM_TIT","Menu Rapido"
 "FIF_UIS_UN","Non in uso"
 "FIF_UIS_IN","In uso"
 "FIF_SET_ICTP","Questa opzione rallenta leggemente la velocità di ricerca. Disabilita quando non in uso"
@@ -177,7 +177,7 @@
 "FIF_PROP_AIR","Aerei"
 "FIF_PROP_WAT","Barche (generato dai prop Alberi e Veicoli)"
 "FIF_EF_SB","Sub-edifici"
-"FIF_ATP_TP","Right-click to drag and move this panel"
+"FIF_ATP_TP","Click destro per trascinare e spostare il pannello"
 "FIF_SET_ATP","Mostra pannello dei tipi d asset"
 "FIF_EF_CT","Con Etichetta Personalizzata"
 "FIF_EF_NCT","Senza Etichetta Personalizzata"
@@ -225,28 +225,29 @@
 "FIF_SET_RECPM","Tempo di modifica cartella principale"
 "FIF_SET_RECFC","Orario creazione file CRP"
 "FIF_SET_RECFM","Orario modifica file crp"
-"FIF_SET_DIS","Disable instant text search. Press ENTER to submit a new text search"
-"FIF_SET_DISTP","Use this option to reduce UI lag when typing in the search box"
-"FIF_SET_STAB","Show search tabs"
-"FIF_STAB_NTAB","New tab"
-"FIF_SET_DSK","Disable secondary keyboard shortcuts when Find It panel is closed"
-"FIF_SET_DSKTP","Avoid conflicts with TM:PE. Only the main keyboard shortcut will remain functional when Find It panel is closed"
-"FIF_SET_CFFL","Configuration File Location"
-"FIF_DOU_WS","Steam Workshop page"
+"FIF_SET_DIS","Disabilita ricerca di testo istantanea. Premi INVIO per inviare una nuova ricerca"
+"FIF_SET_DISTP","Usa questa opzione per ridurre il ritardo dell'interfaccia durante la digitazione nella casella di ricerca"
+"FIF_SET_STAB","Mostra schede di ricerca"
+"FIF_STAB_NTAB","Nuova scheda"
+"FIF_SET_DSK","Disabilita le scorciatoie da tastiera secondaria quando il pannello di Find It è chiuso"
+"FIF_SET_DSKTP","Evita conflitti con TM:PE. Solo la scorciatoia da tastiera principale rimarrà funzionante quando il pannello Find It è chiuso"
+"FIF_SET_CFFL","Posizione File Di Configurazione"
+"FIF_DOU_WS","Pagina workshop di Steam"
 "FIF_DOU_WS_STEAM","via Steam"
-"FIF_DOU_WS_BROWSER","via default browser"
-"FIF_DOU_WS_NOID","This feature only works with custom assets with Steam Workshop IDs"
-"FIF_DOU_WS_STEAMTP","See this asset on Steam Workshop in Steam overlay"
-"FIF_DOU_WS_BROWSERTP","See this asset on Steam Workshop in default browser"
-"FIF_SET_RES_PANEL","Reset Find It panel when it is closed"
-"FIF_SET_RES_PANELTP","Reset all options in Find It when you close the panel"
-"FIF_SE_ICONTP","Export search results"
-"FIF_EXPORT_SEARCH","This will export the search results into an HTML file"
-"FIF_EF_DS","District Style"
-"FIF_SET_CHA","Allow asset creators to hide dependency assets from search results"
-"FIF_SET_CHATP","assets with creator_hidden in their description will be excluded from future search results"
-"FIF_GR_RW2W","Residential Wall-to-Wall"
-"FIF_GR_CW2W","Commercial Wall-to-Wall"
-"FIF_GR_OW2W","Office Wall-to-Wall"
-"FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
+"FIF_DOU_WS_BROWSER","via browser predefinito"
+"FIF_DOU_WS_NOID","Questa funzione funziona solo con asset personalizzati con ID del Workshop di Steam"
+"FIF_DOU_WS_STEAMTP","Vedi questo asset nel Workshop di Steam con Steam Overlay"
+"FIF_DOU_WS_BROWSERTP","Vedi questo asset nel Workshop di Steam su browser predefinito"
+"FIF_SET_RES_PANEL","Reimposta il pannello di Find It quando è chiuso"
+"FIF_SET_RES_PANELTP","Reimposta tutte le opzioni di Find It quando chiudi il pannello"
+"FIF_SE_ICONTP","Esporta i risultati di ricerca"
+"FIF_EXPORT_SEARCH","Questo esporterà i risultati di ricerca in un file HTML"
+"FIF_EF_DS","Stile Distretto"
+"FIF_SET_CHA","Permetti ai creatori di asset di nascondere le dipendenze dai risultati di ricerca"
+"FIF_SET_CHATP","gli asset con creator_hidden nella loro descrizione saranno esclusi dai risultati di ricerca futuri"
+"FIF_GR_RW2W","Residenziale muro a muro"
+"FIF_GR_CW2W","Commerciale muro a muro"
+"FIF_GR_OW2W","Uffici muro a muro"
+"FIF_NET_ZPATH","Sentieri Zonabili"
+"FIF_PLOP_SP","Punti di Servizio"
+"FIF_GR_FD","Distretti Finanziari"
