--- a/FindIt/Translations/nl.csv
+++ b/FindIt/Translations/nl.csv
@@ -250,3 +250,4 @@
 "FIF_GR_OW2W","Muur tegen muur (Kantoren)"
 "FIF_NET_ZPATH","Zoneerbare paden"
 "FIF_PLOP_SP","Servicepunten"
+"FIF_GR_FD","Financiële districten"
