--- a/FindIt/Translations/ru.csv
+++ b/FindIt/Translations/ru.csv
@@ -7,8 +7,8 @@
 "FIF_SET_CMTTP","Главная панель инструментов будет центрирована, если она превысит определённую длину."
 "FIF_SET_UL","Разблокировать всё"
 "FIF_SET_ULTP","Позволяет выбирать и размещать предметы, даже когда они заблокированы"
-"FIF_SET_BP","Исправить плохие объекты при следующем сохранении"
-"FIF_SET_BPTP","Удалите все реквизиты, вызывающие проблему. Отметьте эту опцию и загрузите своё сохранение"
+"FIF_SET_BP","Исправить объекты с ошибками при следующем сохранении"
+"FIF_SET_BPTP","Удалить все объекты, вызывающие проблему. Отметьте эту опцию и загрузите своё сохранение"
 "FIF_SE_WF","Custom"
 "FIF_SE_VF","Vanilla"
 "FIF_SE_IA","Все"
@@ -245,8 +245,9 @@
 "FIF_EF_DS","Стиль района"
 "FIF_SET_CHA","Разрешить создателям объектов скрывать требуемые объекты из результатов поиска"
 "FIF_SET_CHATP","объекты, с creator_hidden в их описании, будут исключены из следующих результатов поиска"
-"FIF_GR_RW2W","Жилое ""стена к стене"""
-"FIF_GR_CW2W","Коммерческое ""стена к стене"""
-"FIF_GR_OW2W","Офис ""стена к стене"""
+"FIF_GR_RW2W","Жилые блокированные"
+"FIF_GR_CW2W","Коммерческие блокированные"
+"FIF_GR_OW2W","Офисы блокированные"
 "FIF_NET_ZPATH","Зонируемые дорожки"
 "FIF_PLOP_SP","Пункты обслуживания"
+"FIF_GR_FD","Финансовые районы"
