--- a/FindIt/Translations/zh.csv
+++ b/FindIt/Translations/zh.csv
@@ -242,11 +242,12 @@
 "FIF_SET_RES_PANELTP","关闭 Find It 面板时重置所有面板选项"
 "FIF_SE_ICONTP","导出搜索结果"
 "FIF_EXPORT_SEARCH","将搜索结果导出到 HTML 文件"
-"FIF_EF_DS","District Style"
-"FIF_SET_CHA","Allow asset creators to hide dependency assets from search results"
-"FIF_SET_CHATP","assets with creator_hidden in their description will be excluded from future search results"
-"FIF_GR_RW2W","Residential Wall-to-Wall"
-"FIF_GR_CW2W","Commercial Wall-to-Wall"
-"FIF_GR_OW2W","Office Wall-to-Wall"
-"FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
+"FIF_EF_DS","区域风格"
+"FIF_SET_CHA","允许资产作者在搜索结果中隐藏依赖资产"
+"FIF_SET_CHATP","在创建者描述中的隐藏资产将会被排除在未来的搜索结果之外。"
+"FIF_GR_RW2W","联排住宅楼"
+"FIF_GR_CW2W","联排商业楼"
+"FIF_GR_OW2W","联排办公楼"
+"FIF_NET_ZPATH","可分区路径"
+"FIF_PLOP_SP","服务点"
+"FIF_GR_FD","金融区"
