--- a/FindIt/Translations/fr.csv
+++ b/FindIt/Translations/fr.csv
@@ -238,8 +238,8 @@
 "FIF_DOU_WS_NOID","Cette fonctionnalité ne fonctionne qu'avec les assets personnalisés avec les ID Steam Workshop"
 "FIF_DOU_WS_STEAMTP","Voir cet asset sur le Steam Workshop dans l'overlay de Steam"
 "FIF_DOU_WS_BROWSERTP","Voir cet asset sur Steam Workshop dans le navigateur par défaut"
-"FIF_SET_RES_PANEL","Réinitialiser la fenêtre de Find It quand elle est fermée"
-"FIF_SET_RES_PANELTP","Remettre à zéro toutes les options de Find It lorsque vous fermez la fenêtre"
+"FIF_SET_RES_PANEL","Réinitialiser le panneau de recherche lorsqu'il est fermé"
+"FIF_SET_RES_PANELTP","Remettre à zéro toutes les options dans Find It lorsque vous fermez le panneau"
 "FIF_SE_ICONTP","Exporter les résultats de recherche"
 "FIF_EXPORT_SEARCH","Ceci exportera les résultats de la recherche dans un fichier HTML"
 "FIF_EF_DS","Style de quartier"
@@ -250,4 +250,4 @@
 "FIF_GR_OW2W","Bureaux contigus"
 "FIF_NET_ZPATH","Chemins zonables"
 "FIF_PLOP_SP","Points de service"
-"FIF_GR_FD","Financial Districts"
+"FIF_GR_FD","Quartier Financier"
