--- a/FindIt/Translations/pt-br.csv
+++ b/FindIt/Translations/pt-br.csv
@@ -248,6 +248,6 @@
 "FIF_GR_RW2W","Residential Wall-to-Wall"
 "FIF_GR_CW2W","Commercial Wall-to-Wall"
 "FIF_GR_OW2W","Office Wall-to-Wall"
-"FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
-"FIF_GR_FD","Financial Districts"
+"FIF_NET_ZPATH","Locais Zoneáveis"
+"FIF_PLOP_SP","Pontos de Serviço"
+"FIF_GR_FD","Distritos Financeiro"
