--- a/FindIt/Translations/tr.csv
+++ b/FindIt/Translations/tr.csv
@@ -249,5 +249,5 @@
 "FIF_GR_CW2W","Commercial Wall-to-Wall"
 "FIF_GR_OW2W","Office Wall-to-Wall"
 "FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
-"FIF_GR_FD","Financial Districts"
+"FIF_PLOP_SP","Servis Noktaları"
+"FIF_GR_FD","Finansal Bölgeler"
