--- a/FindIt/Translations/zh-tw.csv
+++ b/FindIt/Translations/zh-tw.csv
@@ -242,12 +242,12 @@
 "FIF_SET_RES_PANELTP","關閉 Find It 面板時重置 Find It 面板中的所有選項"
 "FIF_SE_ICONTP","匯出搜尋結果"
 "FIF_EXPORT_SEARCH","將搜尋結果匯出成 HTML 檔案"
-"FIF_EF_DS","District Style"
-"FIF_SET_CHA","Allow asset creators to hide dependency assets from search results"
-"FIF_SET_CHATP","assets with creator_hidden in their description will be excluded from future search results"
-"FIF_GR_RW2W","Residential Wall-to-Wall"
-"FIF_GR_CW2W","Commercial Wall-to-Wall"
-"FIF_GR_OW2W","Office Wall-to-Wall"
-"FIF_NET_ZPATH","Zonable Paths"
-"FIF_PLOP_SP","Service Points"
-"FIF_GR_FD","Financial Districts"
+"FIF_EF_DS","區域風格"
+"FIF_SET_CHA","允許素材創作者在搜尋結果中隱藏依賴項"
+"FIF_SET_CHATP","未來，如果素材描述中含有 ""creator_hidden""，搜尋結果將把這個素材排除在外"
+"FIF_GR_RW2W","聯排住宅樓宇"
+"FIF_GR_CW2W","聯排商業樓宇"
+"FIF_GR_OW2W","聯排辦公樓宇"
+"FIF_NET_ZPATH","可分區的道路"
+"FIF_PLOP_SP","服務點"
+"FIF_GR_FD","金融街區"
