--- a/FindIt/Translations/zh.csv
+++ b/FindIt/Translations/zh.csv
@@ -244,10 +244,10 @@
 "FIF_EXPORT_SEARCH","将搜索结果导出到 HTML 文件"
 "FIF_EF_DS","区域风格"
 "FIF_SET_CHA","允许资产作者在搜索结果中隐藏依赖资产"
-"FIF_SET_CHATP","在创建者描述中的隐藏资产将会被排除在未来的搜索结果之外。"
+"FIF_SET_CHATP","在未来，搜索结果将会排除描述中包含“creator_hidden”的资产。"
 "FIF_GR_RW2W","联排住宅楼"
 "FIF_GR_CW2W","联排商业楼"
 "FIF_GR_OW2W","联排办公楼"
-"FIF_NET_ZPATH","可分区路径"
+"FIF_NET_ZPATH","可分区道路"
 "FIF_PLOP_SP","服务点"
 "FIF_GR_FD","金融区"
